Deviseのセットアップを行った

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,5 +18,11 @@ link rel="apple-touch-icon" href="/icon.png"
 = javascript_importmap_tags
 
 body
+  h1.text-3xl.font-bold.p-8
+    | PixPick
+  - if flash[:notice]
+    .bg-blue-100.border-t.border-b.border-blue-500.text-blue-700.px-4.py-3
+      span
+        | #{notice}
 main.container.mx-auto.mt-28.px-5.flex
 = yield
