--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,9 @@ link rel="apple-touch-icon" href="/icon.png"
 body
   header
     - if current_user
-      | #{current_user.name} さん
+      | #{current_user.name} さん　
+      = link_to "ログアウト", destroy_user_session_path,
+        data: { turbo_method: :delete }
     - else
       | ゲストさん
       = button_to "Googleでログイン", user_google_oauth2_omniauth_authorize_path,
