--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
 head
-title = content_for(:title) || "Pix Pick"
+title = content_for(:title) || 'Pix Pick'
 meta name="viewport" content="width=device-width,initial-scale=1"
 meta name="apple-mobile-web-app-capable" content="yes"
 = csrf_meta_tags
@@ -13,19 +13,19 @@ link rel="manifest" href="/manifest.json"
 link rel="icon" href="/icon.png" type="image/png"
 link rel="icon" href="/icon.svg" type="image/svg+xml"
 link rel="apple-touch-icon" href="/icon.png"
-= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
-= stylesheet_link_tag "application", "data-turbo-track": "reload"
+= stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
+= stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
 = javascript_importmap_tags
 
 body
   header
     - if current_user
       | #{current_user.name} さん　
-      = link_to "ログアウト", destroy_user_session_path,
+      = link_to 'ログアウト', destroy_user_session_path,
         data: { turbo_method: :delete }
     - else
       | ゲストさん
-      = button_to "Googleでログイン", user_google_oauth2_omniauth_authorize_path,
+      = button_to 'Googleでログイン', user_google_oauth2_omniauth_authorize_path,
         method: :post, data: { turbo: false }
 
 main.container.mx-auto.mt-28.px-5.flex
