--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,3 +1,3 @@
-h1 Entries#new
-p Find me in app/views/entries/new.html.slim
+h1 エントリー写真を登録
+= link_to 'Googleフォトから写真を追加', @picking_session['pickerUri'], target: '_blank'
 = link_to 'トップページへ', root_path
