pollSessionアクションにsessions#getリクエストの送信機能を追加

--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -3,6 +3,7 @@ h1 エントリー写真を登録
 div(
   data-controller="poll"
   data-poll-session-url-value=@polling_url
+  data-poll-access-token-value=session[:access_token]
   data-poll-poll-notify-url-value="poll_completeアクションのパス"
 )
 
