--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -1,4 +1,4 @@
 h1 Contests#show
 p Find me in app/views/contests/show.html.slim
 
-= link_to 'トップページへ', root_path
+= link_to t('views.common.back_to_home'), root_path
