--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,4 +1,4 @@
-h1 エントリー写真を登録
+h1 #{t('views.entries.new.entry_photos')}
 
 - if @picking_session.present?
   div(
@@ -7,8 +7,8 @@ h1 エントリー写真を登録
     data-poll-access-token-value=session[:access_token]
     data-poll-poll-finish-path-value=finish_polling_contest_entries_path
   )
-    = link_to 'Googleフォトから写真を追加', @picking_session['pickerUri'], data: { action: 'poll#startPolling' }
+    = link_to t('views.entries.new.add_photos_from_google_photos'), @picking_session['pickerUri'], data: { action: 'poll#startPolling' }
 
 = turbo_frame_tag 'selected_items'
 
-= link_to 'トップページへ', root_path
+= link_to t('views.common.back_to_home'), root_path
