--- a/app/views/entries/_media_items.html.slim
+++ b/app/views/entries/_media_items.html.slim
@@ -8,7 +8,9 @@
       - @photo_thumbnails.each do |photo|
         - encoded_photo = Base64.strict_encode64(photo)
         li
-          = image_tag("data:image/jpeg;base64,#{encoded_photo}", alt: t('views.entries.selected_items.google_photo_image'))
-    = button_tag t('helpers.submit.entry.create'), data: { action: 'entry-submission#submitEntries' }
+          = image_tag("data:image/jpeg;base64,#{encoded_photo}",
+            alt: t('views.entries.media_items.google_photo_image'))
+    = button_tag t('helpers.submit.entry.create'),
+      data: { action: 'entry-submission#submitEntries' }
 - else
-  p #{t('views.entries.selected_items.image_not_found')}
+  p #{t('views.entries.media_items.image_not_found')}
