refresh_base_urlメソッドを追加した Entryコントローラにおけるエラーハンドリング時のリダイレクト処理の修正、及びストロングパラメータの追加も併せて行った。

--- a/app/views/entries/_media_items.html.slim
+++ b/app/views/entries/_media_items.html.slim
@@ -1,7 +1,7 @@
 - if @photo_thumbnails.present?
   div(
     data-controller="entry-submission"
-    data-entry-submission-base-urls-value=@base_urls
+    data-entry-submission-entry-attributes-value=@entries_attributes
     data-entry-submission-contest-entries-path-value=contest_entries_path
   )
     ul
