--- a/app/views/contests/index.html.slim
+++ b/app/views/contests/index.html.slim
@@ -4,7 +4,7 @@ h1 = t('views.contests.index.title')
   ul
     - @contests.each do |contest|
       li
-        = contest.name
+        = link_to contest.name, contest_path(contest)
 - else
   p = t('views.contests.index.no_contests')
 
