--- a/app/views/contests/index.html.slim
+++ b/app/views/contests/index.html.slim
@@ -5,6 +5,7 @@ h1 = t('views.contests.index.title')
     - @contests.each do |contest|
       li
         = link_to contest.name, contest_path(contest)
+        = link_to '編集', edit_contest_path(contest)
 - else
   p = t('views.contests.index.no_contests')
 
