--- a/app/views/contests/index.html.slim
+++ b/app/views/contests/index.html.slim
@@ -9,4 +9,4 @@ h1 = t('views.contests.index.title')
 - else
   p = t('views.contests.index.no_contests')
 
-= link_to 'トップページへ', root_path
+= link_to '新しいコンテストを作成', new_contest_path
