--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -4,3 +4,5 @@ p
   = @contest.name
 
 = link_to 'コンテスト一覧へ', user_contests_path(current_user)
+= button_to 'コンテストを削除する', contest_path(@contest), method: :delete,
+  data: { turbo_confirm: '選択したコンテストを削除します。よろしいですか？' }
