ヘッダーにドロップダウンメニューを追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,36 +1,26 @@
 doctype html
 html
-head
-title = content_for(:title) || 'Pix Pick'
-meta name="viewport" content="width=device-width,initial-scale=1"
-meta name="apple-mobile-web-app-capable" content="yes"
-= csrf_meta_tags
-= csp_meta_tag
+  head
+    title = content_for(:title) || 'Pix Pick'
+    meta name="viewport" content="width=device-width,initial-scale=1"
+    meta name="apple-mobile-web-app-capable" content="yes"
+    = csrf_meta_tags
+    = csp_meta_tag
 
-= yield :head
+    = yield :head
 
-link rel="manifest" href="/manifest.json"
-link rel="icon" href="/icon.png" type="image/png"
-link rel="icon" href="/icon.svg" type="image/svg+xml"
-link rel="apple-touch-icon" href="/icon.png"
-/ = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
-= stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
-= javascript_importmap_tags
+    link rel="manifest" href="/manifest.json"
+    link rel="icon" href="/icon.png" type="image/png"
+    link rel="icon" href="/icon.svg" type="image/svg+xml"
+    link rel="apple-touch-icon" href="/icon.png"
+    = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    = javascript_importmap_tags
 
 body
   header
-    - if current_user
-      | #{t('views.layouts.header.greeting', name: current_user.name)}　
-      = link_to t('views.layouts.header.logout'), destroy_user_session_path,
-        data: { turbo_method: :delete }
-    - else
-      | #{t('views.layouts.header.guest')}
-      = button_to t('views.layouts.header.login_with_google'),
-        user_google_oauth2_omniauth_authorize_path,
-        method: :post, data: { turbo: false }
-
-#flash.flash
-  = render 'layouts/flash'
-
-main.container.mx-auto.mt-28.px-5.flex
-= yield
+    - unless current_page?(root_path)
+      = render 'shared/header'
+    main
+      = render 'layouts/flash'
+      = yield
