--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -1,8 +1,6 @@
 h1 コンテスト画面
-- @entry_photos.each do |photo|
-  - encoded_photo = Base64.strict_encode64(photo)
-  li
-    = image_tag("data:image/jpeg;base64,#{encoded_photo}",
-      alt: 'エントリー写真画像')
+.image-gallery
+  - @thumbnail_links.each do |link|
+    = image_tag(link, alt: 'エントリー写真画像')
 
 = link_to t('views.common.back_to_home'), root_path
