--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,6 +1,11 @@
-header
+header(class='flex justify-between items-center px-6 py-4 \
+              bg-white border-b border-gray-200')
   div
-    = link_to 'PixPick', root_path
+    = link_to 'PixPick', root_path,
+      class: 'text-4xl font-bold text-black no-underline hover:text-gray-700'
+  div
+    - if current_user.contests.any?
+      = render 'shared/contest_selection'
   div
     - if current_user
       = render 'shared/menu'
