--- a/app/views/shared/_menu.html.slim
+++ b/app/views/shared/_menu.html.slim
@@ -12,10 +12,11 @@
       class: 'h-16 w-16 rounded-full object-cover'
   div(
     data-dropdown-target='menu'
-    class='hidden absolute top-8 right-0 mt-8 flex w-screen max-w-max'
+    class='hidden absolute top-8 right-0 mt-8 flex \
+          w-screen rounded-md shadow-lg max-w-max'
   )
     .text-s.bg-white.rounded-lg.border-2.overflow-hidden.w-30.z-30
-      = link_to t('views.layouts.user_menu.contest_index'),
+      = link_to t('views.layouts.header.contest_index'),
         user_contests_path(current_user),
         data: { dropdown_target: 'menuItem' },
         class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
