--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -1,6 +1,15 @@
 h1 コンテスト画面
-.image-gallery
-  - @thumbnail_links.each do |link|
-    = image_tag(link, alt: 'エントリー写真画像')
+
+.image-gallery data-controller="modal"
+  dialog data-modal-target="dialog" class="p-8 rounded-lg backdrop:bg-black/80"
+    .modal-content data-modal-target="content"
+
+  - @thumbnail_links_and_ids.each do |thumbnail_link, entry_id|
+    - entries_show_url = contest_entry_path(@contest.id, entry_id)
+    = button_tag type: 'button',
+      data: { action: 'click->modal#open',
+              modal_entries_show_url_value: entries_show_url },
+      class: 'thumbnail-button text-white font-bold py-2 px-4 rounded'
+      = image_tag thumbnail_link, alt: 'エントリー写真画像', class: 'w-full h-auto'
 
 = link_to t('views.common.back_to_home'), root_path
