--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -1,4 +1,15 @@
 .p-8.relative
   = image_tag photo_contest_entry_path(@contest, @entry), alt: 'エントリー写真画像'
-  button.absolute.top-2.right-2.text-lg.font-bold.text-gray-600
-    .hover:text-gray-800 data-action="click->modal#close" ✕
+  button.absolute.-top-7.-right-5.text-4xl.font-bold
+    .text-gray-600 data-action='click->modal#close'
+      |✕
+  .flex.justify-center.mt-6.space-x-8
+    - [1, 2, 3].each do |score|
+      = button_to score.to_s,
+        contest_entry_votes_path(@contest, @entry, score: score),
+        method: :post,
+        remote: true,
+        data: { action: 'click->modal#close' },
+        class: 'flex items-center justify-center w-12 h-12 text-sm \
+          font-medium text-white bg-blue-500 rounded-full shadow \
+          hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300'
