--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
 
 body
   header
-    #flash
+    #flash.fixed.top-0.left-0.w-full.z-50
       = render 'layouts/flash'
     #toast.fixed.top-5.left-1/2.transform.-translate-x-1/2.z-50.space-y-4
       = render 'layouts/toast'
