--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -5,6 +5,6 @@ header(class='flex justify-between items-center px-6 py-4 \
       class: 'text-4xl font-bold text-black no-underline hover:text-gray-700'
   .ml-auto.flex.items-center.space-x-10
     - if current_user.contests.any?
-      = render 'shared/contest_selection'
+      = render 'layouts/header/contest_selection'
     - if current_user
-      = render 'shared/menu'
+      = render 'layouts/header/menu'
