Entry削除機能を追加

--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -13,3 +13,13 @@
         class: 'flex items-center justify-center w-12 h-12 text-sm \
           font-medium text-white bg-blue-500 rounded-full shadow \
           hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-300'
+  - if @entry.user_id == current_user.id
+    .mt-6.text-center
+      = link_to 'この写真を削除する',
+        contest_entry_path(@contest, @entry),
+        method: :delete,
+        data: { turbo_confirm: '選択した写真をコンテストから削除します。よろしいですか？' },
+        class: 'text-red-500 underline underline-offset-4 \
+                hover:text-red-700 cursor-pointer'
+      .mt-2.text-sm.text-gray-700
+        | 自分が登録した写真は、コンテストから削除することができます。
