--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -1,6 +1,7 @@
 = turbo_frame_tag 'entry_content' do
   .p-8.relative
-    = image_tag photo_contest_entry_path(@contest, @entry), alt: 'エントリー写真画像'
+    = image_tag photo_contest_entry_path(@contest, @entry),
+      alt: t('views.entries.alt_text')
 
     button.absolute.-top-7.-right-5.text-4xl.font-bold
       .text-gray-600 data-action='click->modal#close'
@@ -20,14 +21,14 @@
 
     .flex.justify-between.items-center.mt-6
       - if @previous_entry
-        = link_to '前へ',
+        = link_to t('views.entries.show.prev'),
           contest_entry_path(@contest, @previous_entry),
           data: { turbo_frame: 'entry_content' },
           class: 'flex items-center px-6 py-2 bg-white \
                   rounded-full shadow hover:bg-slate-200'
 
       - if @next_entry
-        = link_to '次へ',
+        = link_to t('views.entries.show.next'),
           contest_entry_path(@contest, @next_entry),
           data: { turbo_frame: 'entry_content' },
           class: 'flex items-center px-6 py-2 bg-white \
@@ -35,13 +36,13 @@
 
     - if @entry.user_id == current_user.id
       .mt-6.text-center
-        = button_to 'この写真を削除する',
+        = button_to t('views.entries.show.delete_photo'),
           contest_entry_path(@contest, @entry),
           method: :delete,
           data: { action: 'click->modal#close',
-                  turbo_confirm: '選択した写真をコンテストから削除します。よろしいですか？' },
+                  turbo_confirm: t('views.entries.show.confirm_delete_photo') },
           class: 'text-red-500 underline underline-offset-4 \
                   hover:text-red-700 cursor-pointer'
 
         .mt-2.text-sm.text-gray-700
-          | 自分が登録した写真は、コンテストから削除することができます。
+          = t('views.entries.show.delete_photo_hint')
