--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -1,3 +1,24 @@
-p
-  | 招待リンク:
-  = @invite_url
+.container.mx-auto.max-w-xl.p-6
+  h1.text-2xl.font-bold.mb-4 新たな参加者の招待
+
+  p.text-gray-600
+    | 以下のURLからログインすることで、このコンテストに参加することができます。
+    br
+    | URLをコピーして家族や友人をコンテストに招待しましょう！
+
+  .mt-6
+    input#invite-link.w-full.p-2.text-lg.border.border-gray-300.rounded-lg.shadow-sm(
+      type="text"
+      value=@invite_url
+      readonly=true
+    )
+
+      .mt-6.text-center
+        = button_tag '招待用URLをコピー',
+          data: { controller: 'clipboard',
+                  action: 'clipboard#copy',
+                  clipboard_url_value: @invite_url },
+          class: 'bg-blue-500 text-white font-bold py-3 px-4 rounded-full hover:bg-blue-600 shadow-md'
+
+  p.mt-6.text-center
+    = link_to 'キャンセル', contest_path(@contest), class: 'text-slate-700 hover:underline'
