--- a/app/views/layouts/header/_menu.html.slim
+++ b/app/views/layouts/header/_menu.html.slim
@@ -29,8 +29,10 @@
                 focus:ring-inset focus:ring-2 focus:ring-blue-500 \
                 focus:rounded-lg'
       = link_to t('views.layouts.user_menu.leave'),
-        root_path,
-        data: { dropdown_target: 'menuItem' },
+        user_path(current_user),
+        data: { dropdown_target: 'menuItem',
+                turbo_method: :delete,
+                turbo_confirm: 'データをすべて削除して退会します。よろしいですか？' },
         class: 'no-underline block p-4 bg-white hover:bg-slate-200 \
                 focus:ring-inset focus:ring-2 focus:ring-blue-500 \
                 focus:rounded-lg'
