--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -1,10 +1,8 @@
-header(class='flex justify-between items-center px-6 py-4 \
-              bg-white border-b border-gray-200')
-  div
-    = link_to 'PixPick', root_path,
-      class: 'text-4xl font-bold text-black no-underline hover:text-gray-700'
+.flex.justify-between.items-center.px-6.py-4.bg-white.border-b.border-gray-200
+  = link_to 'PixPick', root_path,
+    class: 'text-4xl font-bold text-black no-underline hover:text-gray-700'
   .ml-auto.flex.items-center.space-x-10
-    - if current_user.contests.any?
+    - if current_user.contests.any? && !@is_editing_contest
       = render 'layouts/header/contest_selection'
     - if current_user
       = render 'layouts/header/menu'
