--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -23,5 +23,5 @@
                   rounded-full hover:bg-blue-600 shadow-md'
 
   p.mt-6.text-center
-    = link_to 'キャンセル', contest_path(@contest),
+    = link_to 'キャンセル', edit_contest_path(@contest),
       class: 'text-slate-700 hover:underline'
