--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -1,8 +1,13 @@
 = render 'form'
 
-.my-4.text-right
+.my-4.flex.justify-end
   = link_to '新しい参加者を招待する', invite_contest_path(@contest), class: 'bg-gray-300 hover:bg-gray-400 py-3 px-4 rounded-full inline-block shadow-lg'
 
-= link_to 'コンテスト一覧へ', user_contests_path(current_user)
-= button_to 'コンテストを削除する', contest_path(@contest), method: :delete,
-  data: { turbo_confirm: '選択したコンテストを削除します。よろしいですか？' }
+.my-4.flex.justify-center
+  = link_to 'コンテストを削除する', contest_path(@contest),
+    data: { turbo_method: :delete,
+      turbo_confirm: '選択したコンテストを削除します。よろしいですか？' },
+    class: 'text-red-500 hover:underline  hover:underline-offset-4 py-2 px-4 rounded-full'
+
+.my-4.flex.justify-center
+  = link_to 'キャンセル', user_contests_path(current_user), class: 'hover:underline hover:underline-offset-4'
