参加者一覧機能を追加

--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -1,11 +1,19 @@
 = turbo_frame_tag 'contest_form'
   = render 'form'
 
-.my-4.flex.justify-end
-  = link_to '新しい参加者を招待する',
-            invite_contest_path(@contest),
-            class: 'bg-gray-300 hover:bg-gray-400 py-3 px-4 \
-                    rounded-full inline-block shadow-lg'
+.my-4.flex.justify-center
+  .w-full.max-w-lg.flex
+    .w-1/2.flex.justify-start
+      | 【参加者】
+      br
+      - @participants.each do |participant|
+        = participant.name
+        br
+    .w-1/2.flex.justify-end.items-center
+      = link_to '新しい参加者を招待する',
+        invite_contest_path(@contest),
+        class: 'bg-gray-300 hover:bg-gray-400 py-3 px-3 \
+                        rounded-full inline-block shadow-lg'
 
 .my-4.flex.justify-center
   = link_to 'コンテストを削除する',
