--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,7 +23,7 @@ html.bg-slate-50
         = render 'shared/flash'
       #toast.fixed.top-5.left-1/2.transform.-translate-x-1/2.z-50.space-y-4
         = render 'shared/toast'
-      - unless current_page?(root_path) || current_page?(join_contest_path)
+      - unless current_page?(root_path)
         = render 'layouts/header/main'
     main
       = yield
