--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -1,13 +1,19 @@
-h1.text-2xl.font-bold.text-center.mt-4= @contest.name
+h1.text-2xl.font-bold.text-center.mt-4 = @contest.name
 
 = turbo_frame_tag 'content' do
-  .flex.justify-center.items-center.mt-6.border.border-gray-300.rounded-lg.overflow-hidden.w-fit.mx-auto
+  div class= 'flex justify-center items-center mt-6 \
+              border border-gray-300 rounded-lg overflow-hidden w-fit mx-auto'
     = link_to '全てのエントリー', contest_path(@contest),
       data: { turbo_frame: 'content' },
-      class: "w-32 h-10 leading-10 px-2 font-bold text-center #{'bg-white text-black' if current_page?(contest_path(@contest))} #{'bg-gray-100 text-gray-500' unless current_page?(contest_path(@contest))} border-r border-gray-300"
+      class: "w-32 h-10 leading-10 px-2 font-bold text-center \
+              #{'bg-white text-black' if current_page?(contest_path(@contest))} \
+              #{'bg-gray-100 text-gray-500' unless current_page?(contest_path(@contest))} \
+              border-r border-gray-300"
     = link_to 'ランキング', ranking_contest_path(@contest),
       data: { turbo_frame: 'content' },
-      class: "w-32 h-10 leading-10 px-2 font-bold text-center #{'bg-white text-black' if current_page?(ranking_contest_path(@contest))} #{'bg-gray-100 text-gray-500' unless current_page?(ranking_contest_path(@contest))}"
+      class: "w-32 h-10 leading-10 px-2 font-bold text-center \
+              #{'bg-white text-black' if current_page?(ranking_contest_path(@contest))} \
+              #{'bg-gray-100 text-gray-500' unless current_page?(ranking_contest_path(@contest))}"
 
   - if current_page?(contest_path(@contest))
     = render 'contests/all_entries'
